--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Yimei Chen's Personal Homepage"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://cym-network.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "cym-network/cym-network.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -25,7 +25,7 @@ author:
   name             : "Yimei Chen"
   #pronouns         : # example: "she/her"  
   bio              : "Ph.D. student, Tsinghua University"
-  #location         : "Earth"
+  location         : "Beijing"
   #employer         : "Red Brick University"
   #uri              : # URL
   email            : "chenyime22@mails.tsinghua.edu.cn" 
@@ -34,7 +34,7 @@ author:
   #arxiv            : # URL - Update with the correct link to your profile
   #googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   #impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0009-0000-7373-4265"
   #semantic         : # URL
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   #researchgate     : # URL
