--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
 
   # Academic websites
   #arxiv            : # URL - Update with the correct link to your profile
-  #googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=bboNdbEAAAAJ"
   #impactstory      : # URL
   orcid            : "https://orcid.org/0009-0000-7373-4265"
   #semantic         : # URL
